syntax = "proto3";

message QueryDocRequest {
    string doc_id = 1;
}
message QueryDocParams {
    string doc_id = 1;
}
